# sanctuary-revolution-alpha

./: .gitignore  .sancrev.yml
application/cave/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DNA_OMNISANC.md  ARCHITECTURE_DNA_WORKFLOW_SYSTEM.md  ARCHITECTURE_INSIGHTS_20260126.md  ARCHITECTURE_SEED.md  CAVEAGENT_DESIGN.md  CAVEAGENT_LIVE_MIRROR.md  COMPONENT_REVIEW.md  DNA_DEFINITION_FROM_USER.md  HANDOFF_20260120.md  HANDOFF_20260121.md  HANDOFF_20260121_FINAL.md  HANDOFF_20260121_HOOKS.md  HANDOFF_20260121_HOOKS_REGISTRY.md  HANDOFF_20260121_v2.md  HANDOFF_20260121_v3.md  HANDOFF_20260121_v4.md  HANDOFF_20260121_v5.md  HOOK_ARCHITECTURE.md  SESSION_NOTES.md  SESSION_SUMMARY_OMNISANC_WIRING.md  SESSION_SUMMARY_OMNISANC_WIRING_v2.md  pyproject.toml
application/compoctopus/: .gitignore  DESIGN.md  auto_dev.py  docker-compose.yml  mcp_server.py  pyproject.toml  run_bandit.py  run_blog_arm.py  run_explorer.py  run_octohead.py  run_planner.py
application/conductor/: pyproject.toml  run_conductor.py
application/paia-builder/: CONTINUITY.md  pyproject.toml  setup.py
application/sanctuary-revolution/: .gitignore  ARCHITECTURE_HANDOFF.md  CONTINUITY.md  NEXT_SESSION.md  pyproject.toml  start_sancrev.py  start_sancrev.sh  task_list.json
application/sanctum-builder/: CONTINUITY.md  pyproject.toml
automation/autopoiesis-mcp/: .gitignore  AGENTS.md  README.md  SHIP_PATH.md  SKILL_GAP_DETECTION_SPEC.md  loop.sh  pyproject.toml  settings.json
automation/code-commenter/: pyproject.toml
automation/codenose/: .gitignore  README.md  pyproject.toml
automation/dragonbones/: pyproject.toml
base/heaven-framework/: .gitignore  20250728_182638_db.json  MANIFEST.in  MATRYOSHKA_IMPLEMENTATION.md  README.md  actual_failing_request_2.json  debug_400_detailed.py  debug_400_error.py  debug_live_request.py  debug_tool_capture.py  failing_request_2.json  heaven_cli_chat.py  heaven_cli_chat_v2.py  heaven_cli_demo.py  pyproject.toml  requirements.txt  setup.py
base/heaven-tree-repl/: AGENT_APP_GENERATION_PIPELINE.md  BIDIRECTIONAL_TREESHELL_FRONTEND_INTEGRATION.md  CONFIG_ARCHITECTURE.md  CONFIG_SYSTEM_CONTINUATION.md  IMPLEMENTATION_PLAN_17_CONFIG.md  MANIFEST.in  NEW_NAV_CONFIG_SYSTEM.md  README.md  SPRINT_PREPARATION_GUIDE.md  TESTING_19_CONFIG_SYSTEM.md  TREESHELL_COORDINATE_SYSTEM.md  TREESHELL_LIBRARY_FACTORY.md  TREESHELL_MARKETING_VISION.md  TREESHELL_MVP_SPECIFICATION.md  TREESHELL_MVP_SPECIFICATION_PHASE1.md  TREESHELL_TRANSFORMATION_PLAN.md  debug_family_loading.py  debug_user_treeshell.py  debug_what_config_gets_loaded.py  heaven_conversation_utils.py  heaven_response_utils.py  interactive_repl.py  langgraph_functions.py  langgraph_omnitool_executor.py  lark_parser.py  math_notes.md  nav_and_shortcuts_readme.md  operand_executor.py  operand_parser.py  proof_of_concept_agent_builder.py  pyproject.toml  roadmap_85.md  roadmap_86.md  roadmap_88.md  roadmap_89.md  setup.py  test_19_config_system.py  test_callable_nodes.py  test_exec_sequence.py  test_semantic_addressing.py  (+6 more)
base/sanctuary-system/: CONTINUITY.md  CONTINUITY_SESSION_20.md  CONTINUITY_SESSION_21.md  CONTINUITY_SESSION_22.md  pyproject.toml
base/soma-prolog/: 4_17_answers_1.md  4_17_answers_2.md  4_17_answers_3.md  4_17_answers_4.md  4_17_questions.md  4_17_questions_2.md  4_17_questions_3.md  4_17_questions_4.md  4_17_response_to_questions.md  4_18_answers_youknow_core_sentence.md  4_18_questions_youknow_core_sentence.md  HANDOFF_READ_FIRST.md  SOMA_CARTON_MERGE_DECISIONS_2026_04_07.md  SOMA_METAPROGRAMMING_VISION.md  SOMA_REQUIREMENTS.md  SOMA_REQUIREMENTS_WIP.md  SOMA_STANDALONE_VISION.md  UNIVERSAL_PATTERNS.md  pyproject.toml  test_janus.py  test_soma_owl.py
base/youknow-kernel/: .gitignore  META_LAYER_MISSING.md  YOUKNOW_COMPILER_AUDIT_2026-02-16.md  pyproject.toml
integration/conversation-ingestion/: CANONICAL_FRAMEWORKS.md  FRAMEWORK_ORGANIZATION_METHODOLOGY.md  GNOSYS_KIT_REFERENCE.md  GNOSYS_KIT_SYSTEM_PROMPT_ADDITION_V1.md  HARNESS_EMERGENCE_FRAMEWORK.md  INTEGRATION_TEST_PLAN.md  MCP_V2_SPEC.md  MCP_V2_SPEC_BACKUP.md  PAIA_SKILLS_AND_COMMANDS.md  PHASE_5_8_IMPLEMENTATION_PLAN.md  README.md  SANCREV_ARCHITECTURE_BREAKTHROUGH.md  SYSTEM_PROMPT_V2_DRAFT.md  SYSTEM_PROMPT_V2_DRAFT_BACKUP.md  SYSTEM_PROMPT_V2_DRAFT_BAD.md  SYSTEM_PROMPT_V2_SESSION_NOTES.md  integration_test.py  mcp_fixes_to_make_12_6_2025.md  omnisanc_todo.md  pyproject.toml  setup.py
integration/hyperon-mcp/: README.md  pyproject.toml  setup.py
integration/observatory-sdna/: grug_server.py  mcp_server.py  pyproject.toml
integration/sophia-mcp/: README.md  pyproject.toml
integration/summarizer-mcp/: pyproject.toml
knowledge/carton-mcp/: .gitignore  AUTO_CARTON_TIMELINE_VISION.md  CONCEPT_VISION.md  DEVELOPMENT_SEQUENCE.md  NEO4J_NAMESPACING_PLAN.md  README.md  TODO_flight_config_mirroring.md  UARL_SPEC.md  YOUKNOW_INTEGRATION.md  __init__.py  add_concept_tool.py  auto_definition_agent_idea.md  backfill_wiki_files.py  carton_utils.py  claude_desktop_config_template.json  concept_config.py  migrate_inverse_relationships.py  observation_worker_daemon.py  ontology_graphs.py  pyproject.toml  requirements.txt  sequential_pattern_concept_mining_idea.md  server.py.deprecated  server_fastmcp.py  smart_chroma_rag.py  substrate_projector.py  test_relationship_constraints.py  wiki_config.py  word_level_concept_mining_idea.md
starsystem/emergence-engine/: .gitignore  README.md  emergence_engine_mcp.json  pyproject.toml  setup.py  test_lifecycle_management.py  test_mcp_lifecycle.py  verify_architecture.py
starsystem/flight-predictor/: AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  pyproject.toml
starsystem/metastack/: .gitignore  README.md  pyproject.toml
starsystem/reward-system/: README.md  pyproject.toml  setup.py
starsystem/starship-mcp/: pyproject.toml
starsystem/waypoint/: README.md  pyproject.toml
treeshell/sancrev-treeshell/: CONTINUITY_SESSION_18.md  CONTINUITY_SESSION_19.md  CONTINUITY_SESSION_20.md  CONTINUITY_SESSION_21.md  pyproject.toml  sancrev_game_loop_flight_config.json
(+1634 files in other folders)
