[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cave-harness"
version = "0.1.0"
description = "Code Agent Virtualization Environment - Virtualize any terminal-based code agent"
readme = "README.md"
license = {text = "GPBL-1.0"}
requires-python = ">=3.10"
authors = [
    {name = "Isaac", email = "isaac@example.com"}
]
keywords = ["ai", "agents", "claude", "virtualization", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
sdna = ["sanctuary-dna>=0.1.0"]
llegos = ["llegos>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
cave-server = "cave.server.http_server:run_server"

[project.urls]
Homepage = "https://github.com/sancovp/cave"
Documentation = "https://github.com/sancovp/cave#readme"
Repository = "https://github.com/sancovp/cave"

[tool.setuptools.packages.find]
where = ["."]
include = ["cave*"]
