[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor"
version = "0.1.0"
description = "Conductor: persistent SDNA agent managing Grug + Researcher"
requires-python = ">=3.11"
dependencies = [
    "sdna",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
