[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paia-builder"
version = "0.9.0"
description = "PAIAB mini-game: Build Personal AI Agents with GEAR progression"
readme = "CONTINUITY.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "youknow-kernel",
]

[project.optional-dependencies]
dev = ["pytest"]
