[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopoiesis-mcp"
version = "0.1.4"
description = "Self-maintaining work loop system for Claude. Disingenuousness is death."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
autopoiesis-mcp = "autopoiesis_mcp.mcp_server:mcp.run"
