[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codenose"
version = "0.4.1"
description = "Code smell detection for LLMs - sniffs out duplicate logic, architecture violations, and other blind spots"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Isaac", email = "isaac@example.com" }
]
keywords = ["code-quality", "linting", "llm", "code-smell", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
codenose = "codenose.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["codenose"]
