[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonbones"
version = "2.0.0"
description = "Dragonbones — Ontological Chain Type Compiler for Compound Intelligence"
requires-python = ">=3.11"
dependencies = ["carton-mcp", "neo4j"]

[tool.setuptools.packages.find]
include = ["dragonbones*"]
