[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "heaven-framework"
version = "0.1.21"
description = "HEAVEN - Hierarchical, Embodied, Autonomously Validating Evolution Network"
readme = "README.md"
authors = [
    {name = "HEAVEN Team", email = "heaven@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "google-adk>=0.2.0",
    "google-genai>=1.11.0",
    "langchain-anthropic>=0.3.13",
    "langchain-core>=0.3.65",
    "langchain-deepseek>=0.1.2",
    "langchain-google-genai>=2.1.5",
    "langchain-groq>=0.2.4",
    "langchain-openai>=0.3.22",
    "langchain>=0.1.0",
    "langgraph>=0.2.0",
    "litellm>=1.67.5",
    "pydantic>=2.11.7",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "fastmcp==2.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
heaven-framework-toolbox = "heaven_base.mcps.toolbox_server:main"

[project.urls]
Homepage = "https://github.com/sancovp/heaven-framework"
Repository = "https://github.com/sancovp/heaven-framework.git"
Documentation = "https://heaven-framework.readthedocs.io"
Issues = "https://github.com/sancovp/heaven-framework/issues"

[tool.setuptools]
packages = [
    "heaven_base",
    "heaven_base.agents", 
    "heaven_base.agents.summary_agent",
    "heaven_base.agents.decider",
    "heaven_base.agents.docstring_agent",
    "heaven_base.agents.example_maker",
    "heaven_base.cli",
    "heaven_base.configs", 
    "heaven_base.langgraph",
    "heaven_base.mcps",
    "heaven_base.memory",
    "heaven_base.progenitor",
    "heaven_base.prompts",
    "heaven_base.registry",
    "heaven_base.swarm",
    "heaven_base.tools",
    "heaven_base.tool_utils",
    "heaven_base.utils"
]

[tool.setuptools.package-data]
heaven_base = ["py.typed"]
"heaven_base.swarm" = ["*.conf"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']