[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctuary-system"
version = "0.1.0"
description = "Sanctuary-specific models built on youknow-kernel"
requires-python = ">=3.10"
dependencies = ["pydantic==2.10.6", "youknow-kernel"]

[tool.setuptools.packages.find]
include = ["sanctuary_system*"]
