[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youknow-kernel"
version = "0.2.0"
description = "The homoiconic kernel. Tautologies that look like reasoning. Now with PIO, EMR, Reach, and formal hallucination."
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "numpy", "rdflib", "pyshacl"]

[project.optional-dependencies]
carton = ["neo4j"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
youknow_kernel = ["*.owl", "*.ttl"]
