[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "observatory-sdna"
version = "0.2.0"
description = "Observatory research system on SDNA substrate (MiniMax/Heaven)"
requires-python = ">=3.11"
dependencies = [
    "sdna",
    "heaven-framework",
]

[project.scripts]
researcher-mcp = "observatory.researcher_mcp:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["observatory*"]
exclude = ["container*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
