[project]
name = "carton-mcp"
version = "0.1.67"
description = "CartOn - Cartographic knowledge graph mapping for concept networks"
authors = [{name = "HEAVEN System"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp==2.9.0",
    "pydantic==2.10.6",
    "heaven-framework>=0.1.14",
    "neo4j==6.1.0",
    "GitPython==3.1.47",
    "langchain-core==0.3.84",
    "langchain-text-splitters==0.3.11",
    "langchain-community==0.3.31",
    "langchain-chroma==0.2.3",
    "langchain-openai==0.3.22",
    "tiktoken==0.12.0",
    "chromadb>=0.4.0",
]

[project.scripts]
carton-mcp = "carton_mcp.server_fastmcp:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["carton_mcp"]
package-dir = {"carton_mcp" = "."}

[tool.mcp]
name = "carton"
description = "CartOn - Map your knowledge graph with Zettelkasten concepts and Neo4j storage"