[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergence-engine"
version = "0.1.0"
description = "3-pass systematic thinking methodology for compound intelligence systems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
]

[project.scripts]
emergence-engine-mcp = "emergence_engine.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emergence_engine*"]

[tool.setuptools.package-data]
"*" = ["*.md"]