[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "starsystem_reward_system"
version = "0.1.0"
description = "STARSYSTEM reward and fitness scoring system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "heaven-framework>=0.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["starsystem_reward_system"]
