[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager-mcp"
version = "0.1.8"
description = "Self-steering skill management MCP with RAG-based prediction matching"
readme = "README.md"
license = "LicenseRef-GPBL-1.0"
license-files = ["LICENSE"]
authors = [
    { name = "Isaac Wostrel-Rubin", email = "isaac@sanctuary.systems" },
]
keywords = ["mcp", "skills", "rag", "self-steering", "claude-code", "compound-intelligence"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sancovp/skill-manager-mcp"
Repository = "https://github.com/sancovp/skill-manager-mcp"
Issues = "https://github.com/sancovp/skill-manager-mcp/issues"

[project.scripts]
skill-manager = "skill_manager.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
