[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crystal-ball-mcp"
version = "2.0.0"
description = "Crystal Ball MCP — Shell interface to Crystal Ball SaaS"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "mcp[cli]",
    "websockets>=12.0",
]

[project.scripts]
crystal-ball-mcp = "crystal_ball_mcp:main"
